fdo#73247: Code fixed for Shape rotation not preserved in RT

Problem Description:
- When we create the shape with text, rotated it with some angle,
the rotation angle is not preserved after roundtrip.

Implementation:
- Use the FrameInteroGrabBag to preserve  the rotation angle.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7367

Change-Id: I8a44e82d21f08ecb221cdbfef73f02a652f2bad3